--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,7 @@ dist
 .dynamodb/
 
 # TernJS port file
-.tern-port
+.tern-portm
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
